[tool.poetry]
name = "puzzle_py"
version = "0.1.0"
description = "Puzzle questions"
authors = ["Sri Thuraisamy <sri@watchblade.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "3.9.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
